fix alignment issue on the header search icon

--- a/src/app/shared/layout/top-bar/clients-navigation/clients-navigation.component.less
+++ b/src/app/shared/layout/top-bar/clients-navigation/clients-navigation.component.less
@@ -89,7 +89,7 @@
       display: flex;
       align-items: center;
       width: 18px;
-      height: 28px;
+      height: 20px;
       background-repeat: no-repeat;
       background-size: contain;
       background-image: url('assets/common/icons/contact/building.svg');
